--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Noah's blog
+title: Noa's blog
 description: >- # this means to ignore newlines until "baseurl:"
   I have written things, occasionally.
 baseurl: "" # the subpath of your site, e.g. /blog
